# src/docs/swagger.json
@@ -4,8 +4,8 @@
         "contact": {}
     },
     "paths": {
-        "/user": {
-            "post": {
+        "/user/{usrId}": {
+            "get": {
                 "description": "Obtains info of Users",
                 "consumes": [
                     "application/json"
@@ -19,13 +19,11 @@
                 "summary": "Show user",
                 "parameters": [
                     {
-                        "description": "User",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.UserInsert"
-                        }
+                        "type": "string",
+                        "description": "ID Del usuario",
+                        "name": "usrId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -66,28 +64,6 @@
                 },
                 "status": {
                     "type": "integer"
-                }
-            }
-        },
-        "model.UserInsert": {
-            "type": "object",
-            "required": [
-                "email",
-                "firstName",
-                "lastName"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "lastName": {
-                    "type": "string"
                 }
             }
         },
